# mx4

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: debian-package.yml
contrib/debian/: postinst  postrm
contrib/udev/: 99-mx4.rules
src/: autostart.rs  config.rs  daemon.rs  device.rs  lib.rs  main.rs  service.rs
src/features/: battery.rs  dpi.rs  firmware.rs  force_button.rs  haptic.rs  host.rs  mod.rs  wheel.rs
